# lambda_wp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  example_config.yaml  lambda_modbus.py  pyproject.toml  requirements.txt
